2003-07-28  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* logo-competition/logos/Eric_Hafner/*:
	* logo-competition/logos/Daniel_Gadziemski/*:
	* logo-competition/logos_new.php:
	added logos

2003-07-23  Uwe Pross  <uwe.pross@gmx.net>

	* COPYING: 
	* definitions.inc:
	added gpl license file and statement.
	
2003-07-22  Uwe Pross  <uwe.pross@gmx.net>

	* web-theme/themes/theme_descriptions.inc: 
	* web-theme/classes/pager_on_top_class.inc:
	changed default look to a more fancy one ;-)

2003-07-21  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Alex_Wallis/*:
	added logo of alex wallis

2003-07-18  Uwe Pross  <uwe.pross@gmx.net>

	* customize_theme/theme_descriptions_helper.inc: 
	* definitions.inc: 
	fixed problems using cookies for theme ond style selection. 

2003-07-17  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* web-theme/classes/pager_on_top_class.inc:
	* web-theme/themes/pager_on_top_theme.inc:
	* web-theme/themes/theme_descriptions.inc:
	* web-theme/themes/plain_theme.inc:
	changed theme to "pager on top theme"
	
2003-07-16  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Russell_Martin/*:
	added logo of russel martin

2003-07-16  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Anthony_Lee/index.php: 
	* logo-competition/logos_new.php:
	added two more logos
	
2003-07-15  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Geoffroy_Giraux/: 
	* logo-competition/logos/Annemarie_Rowson/:
	* logo-competition/logos/Anthony_Lee/:
	added new logos
	
2003-07-11  Uwe Pross  <uwe.pross@gmx.net>

	* fvwm-cats/*.php: 
	fixed links from cat page to index.php

	* authors/index.php:
	fixex link to picture page

2003-07-10  Uwe Pross  <uwe.pross@gmx.net>

	* navgen.cli:
	* *.php:
	fixed problem with loading definitions.inc when using command line
	interface. reduced debugging info of navgen.
	
	* documentation/dev_webpage/index.php: 